src/main/resources/static/css/squad-chat.css
#page-wrapper {
    display: flex;
    justify-content: center;
    align-items: center;
}

#squad-chat-wrapper {
    width: 96vw;
    height: calc(96vh - 100px);
    border: solid #5CFD42 4px;
    border-radius: 4em 0 0 0;
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
}

#squad-img-wrapper {
    position: absolute;
    left: -4px;
    top: -4px;
    width: 8em;
    height: 8em;
    z-index: 100;
    border: solid 4px;
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.squad-image {
    width: 100%;
    height: 100%;
    background-position: center;
    background-size: cover;
    border: 4px;
    border-radius: 50%;
    position: absolute;
    top: 0;
    left: 0;
}

.darken {
    filter: brightness(50%);
}

#upload-squad-picture {
    pointer-events: none;
    z-index: 5;
}

#squad-title-wrapper {
    width: 100%;
    height: 4em;
    border-bottom: solid #5CFD42 4px;
    display: flex;
    justify-content: center;
    align-items: center;
}

#squad-title {
    font-size: xxx-large;
}

#chat-body-wrapper {
    width: 100%;
    height: 100%;
    flex-grow: 1;
    display: flex;
    overflow: hidden;
}

#chat-messages-div-wrapper {
    display: flex;
    flex-direction: column;
    border-right: solid #5CFD42 4px;
    flex-grow: 1;
    padding: .5em;
    overflow-y: scroll;
}

#chat-messages-div-wrapper::-webkit-scrollbar-thumb,
#squad-users-div::-webkit-scrollbar-thumb{
    background-image: linear-gradient(180deg, yellowgreen 0%, #5CFD42 99%);
    border-radius: 100px;
    width: 9px;
}

#chat-messages-div-wrapper::-webkit-scrollbar,
#squad-users-div::-webkit-scrollbar{
    background-color: black;
    border-radius: 100px;
    width: 9px;
    height: 9px;
}

#chat-messages-div {
    width: 100%;
    padding-top: 60vh;
}

.single-message-wrapper {
    position: relative;
    width: 100%;
    display: flex;
    margin: .5em 0;
}

.single-message-content-wrapper {
    width: 100%;
}

.single-message-top-wrapper {
    display: flex;
    width: 100%;
    justify-content: space-between;
    align-items: center;
}

.single-message-timestamp {
    font-size: x-small;
    filter: brightness(60%);
    margin-left: 1em;
    margin-right: 10px;
}

.single-message-content {
    padding-right: calc(4em + 10px);
}

.message-options {
    position: absolute;
    right: 10px;
    bottom: 0;
    display: flex;
    align-items: center;
    justify-content: center;
}

.message-edit-button-wrapper {
    position: absolute;
    right: 1em;
    bottom: 0;
    color: #5CFD42;
}

.was-edited {
    margin-left: 1em;
    font-size: x-small;
    filter: brightness(60%);
}

.message-button {
    width: 2em;
    height: 2em;
    display: block;
}

.hidden {
    display: none;
}

.soft-hidden {
    height: 0;
    opacity: 0;
}

.message-sender-img-wrapper {
    width: 3em;
    margin-right: .5em;
}

#chat-sidebar-wrapper {
    height: 100%;
    width: 180px;
    min-width: 180px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

#current-users-wrapper {
    width: 100%;
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    align-items: center;
    overflow: hidden;
    margin-right: 10px;
}

#squad-users-div-wrapper {
    width: 100%;
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    padding: .5em;
    overflow-y: scroll;
}

#squad-users-div {
    display: flex;
    flex-direction: column;
    width: 100%;
    align-items: center;
}

.squad-member-wrapper {
    height: 100%;
    width: 100%;
    padding: .36em 0;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.squad-member-img {
    height: 3em;
}

#text-input-wrapper {
    width: 100%;
    border-top: solid #5CFD42 4px;
    display: flex;
}

#chat-text-input {
    flex-grow: 1;
    min-width: 20px;
}

#chat-button-container {
    width: calc(180px + 2px);
    min-width: calc(180px + 2px);
}

#chat-send-button {
    width: 100%;
}


.squads {
    /*font-size: 80px;*/
    color: #fff;
    /*text-align: center;*/
    animation: glow-text 20s linear 0s infinite;
}

@keyframes glow-text {
    from {
        text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #ff0000, 0 0 40px #ff0000, 0 0 50px #ff0000, 0 0 60px #ff0000, 0 0 70px #ff0000;
    }
    12.5% {
        text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #ff8000, 0 0 40px #ff8000, 0 0 50px #ff8000, 0 0 60px #ff8000, 0 0 70px #ff8000;
    }
    25% {
        text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #ffea00, 0 0 40px #ffea00, 0 0 50px #ffea00, 0 0 60px #ffea00, 0 0 70px #ffea00;
    }
    37.5% {
        text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #37ff00, 0 0 40px #37ff00, 0 0 50px #37ff00, 0 0 60px #37ff00, 0 0 70px #37ff00;
    }
    50% {
        text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #00fff7, 0 0 40px #00fff7, 0 0 50px #00fff7, 0 0 60px #00fff7, 0 0 70px #00fff7;
    }
    65.5% {
        text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #0077ff, 0 0 40px #0077ff, 0 0 50px #0077ff, 0 0 60px #0077ff, 0 0 70px #0077ff;
    }
    75% {
        text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #8251ff, 0 0 40px #8251ff, 0 0 50px #8251ff, 0 0 60px #8251ff, 0 0 70px #8251ff;
    }
    87.5% {
        text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e600ff, 0 0 40px #e600ff, 0 0 50px #e600ff, 0 0 60px #e600ff, 0 0 70px #e600ff;
    }
    100% {
        text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #ff0000, 0 0 40px #ff0000, 0 0 50px #ff0000, 0 0 60px #ff0000, 0 0 70px #ff0000;
    }
}

@media only screen and (max-width: 600px) {
    .squad-member-name {
        display: none;
    }

    #current-users-wrapper h5 {
        display: none;
    }

    #chat-sidebar-wrapper {
        width: 4em;
        min-width: 4em;
    }

    #squad-img-wrapper {
        width: 5em;
        height: 5em;
    }

    #squad-chat-wrapper {
        border-radius: 2.5em 0 0 0;
    }

    #chat-button-container {
        width: calc(4em + 2px);
        min-width: calc(4em + 2px);
    }

    #squad-title {
        font-size: x-large;
    }

    #chat-messages-div-wrapper::-webkit-scrollbar-thumb,
    #squad-users-div::-webkit-scrollbar-thumb{
        visibility: hidden;
    }

    #chat-messages-div-wrapper::-webkit-scrollbar,
    #squad-users-div::-webkit-scrollbar{
        visibility: hidden;
    }

}

